--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev": "vite dev src",
     "start": "npm run dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "jest": {
     "testEnvironment": "jsdom",
